# regime-backtesting

./: README.md  pyproject.toml
regime_backtesting/: __init__.py  backtest.py
tests/: test_backtest.py
